[tool.poetry]
name = "florida"
version = "0.1.5"
description = "Lightweight python code to automatically generate flows for P&L facility."
authors = ["Scott Marquis <scott.marquis@northvolt.com>", "Sivakumar Mallikarjunan <sivakumar.mallikarjunan@northvolt.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.2.2"
pydantic = "^1.10"
matplotlib = "^3.5.2"
scipy = "^1.9.0"
openpyxl = "^3.0.10"
plotly = "^5.18.0"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
flake8 = "^4.0.1"
black = "^22.6.0"
pytest = "^7.1.2"
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-napoleon = "^0.7"
ipykernel = "^6.15.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
